<resources>
    <string name="app_name">EducationalGame</string>
    <string name="high_scores">High Scores</string>
    <string name="memory_master">Memory Master</string>
    <string name="maths_master">Maths Master</string>
    <string name="title">Test Your Skills!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finished">Finished!</string>
    <string name="music">Music</string>
    <string name="sound">Sound</string>
    <string name="difficulty">Difficulty:</string>
    <string name="remember_the_order">Remember the order.</string>
    <string name="main_menu">Main Menu</string>
    <string name="play_again">Play Again?</string>
    <string name="back">Back</string>
    <string name="id">ID</string>
    <string name="date">Date</string>
    <string name="level">Level</string>
    <string name="score">Score</string>
    <string name="select_the_higher">Select the - HIGHER</string>
    <string name="equal">Equal</string>
    <string name="settings_button">Settings Button</string>
    <string name="tweet">Tweet Score</string>
    <string name="settings">Settings</string>
    <string name="authorize">Authorize</string>
    <string name="working">Working....</string>
    <string name="ImgDescription">Tick or cross depending on the answer</string>
    <string name="tweet_image_description">Arrow showing where to tweet your high score.</string>
    <string name="difficulty_label">Select your difficulty:</string>
    <string name="default_time">Time: 00</string>
    <string name="default_score">Score: 00</string>
    <string name="tile_description">an button image of a shape that lights up</string>
</resources>
