<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".SettingsFragment">

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorBackground"
        android:contentDescription="@string/settings_button"
        android:src="@android:drawable/ic_notification_clear_all" />

    <Switch
        android:id="@+id/musicSwitch"
        style="@style/settingsTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:checked="true"
        android:padding="10dp"
        android:text="@string/music"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/soundSwitch"
        style="@style/settingsTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:checked="true"
        android:padding="10dp"
        android:text="@string/sound"
        android:textSize="18sp" />

    <TextView
        style="@style/settingsTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:gravity="bottom"
        android:text="@string/difficulty"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/settingsdifficulty"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="36dp"
        android:entries="@array/difficultyLevels"
        android:gravity="top"
        android:paddingStart="36dp"
        android:paddingEnd="36dp" />

</LinearLayout>