<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_main" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="32dp"
            android:padding="16dp"
            android:text="@string/title"
            android:textSize="26sp"
            android:textColor="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:onClick="startHLGame"
                android:text="@string/maths_master"
                tools:ignore="ButtonStyle" />

            <Button
                style="@style/buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:onClick="startMemoryGame"
                android:text="@string/memory_master" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:layout_marginTop="42dp"
            android:text="@string/difficulty_label"
            android:textSize="26sp"
            android:textColor="@color/colorPrimaryDark" />

        <Spinner
            android:id="@+id/difficultySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="top"
            android:layout_marginBottom="26dp"
            android:entries="@array/difficultyLevels"
            android:padding="16dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                style="@style/buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="16dp"
                android:onClick="highScoresClicked"
                android:text="@string/high_scores" />
        </RelativeLayout>

    </LinearLayout>

        <fragment
            android:id="@+id/settingsFragment"
            android:name="au.edu.jcu.cp3406.educationalgame.SettingsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:tag="settingsFragment"
            tools:layout="@layout/fragment_settings" />

</FrameLayout>